<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Relative1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/Color_Wheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:padding="30dp"
        android:src="@drawable/rgb_color_wheel"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/option"
        android:id="@+id/option_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />
    <Button
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/mic"
        android:id="@+id/mic_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/alarm"
        android:id="@+id/alarm_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BrightnessBar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="430dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:max="100"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/brightness"
        android:id="@+id/textView"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="390dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/white"
        android:id="@+id/center_button"
        android:layout_marginTop="185dp"
        android:background="@drawable/white2"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/SeekValue"
        android:layout_alignTop="@+id/textView"
        android:layout_alignRight="@+id/BrightnessBar"
        android:layout_alignEnd="@+id/BrightnessBar"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/RGB"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="465dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_margin="10dp"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/mic_Image"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/mic_off"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        android:id="@+id/connection_button"
        android:layout_alignParentTop="true"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>